# local-llm-server-test

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yaml  pyproject.toml
examples/: async_usage.py  basic_usage.py
llm_client/: __init__.py  client.py  config.py
scripts/diagnostics/: openrouter_diagnostic.py
scripts/smoke/: client_smoke.py  raw_sdk_smoke.py  vl_smoke.py
tests/: test_client.py  test_vl.py
